<resources>
    <string name="app_name">Physics</string>
    <string name="progress_dialog_title">Carregando...</string>
    <string name="progress_dialog_msg">Aguarde enquanto recuperamos os dados do servidor</string>
    <string name="DEVELOPER_KEY">AIzaSyCxiUa4wRlUwaJ_x20EsLvUrPq0HFz0ego</string>
    <string name="tab_material">TEXTO</string>
    <string name="tab_videos">VÍDEOS</string>
    <string name="tab_tests">EXERCÍCIOS</string>
    <string name="tests_title">Exercícios</string>
    <string name="menu_credits">Créditos</string>
    <string name="menu_material">Material Didático</string>
    <string name="action_settings">Configurações</string>
    <string name="material_instructions">Selecione um dos módulos ao lado e comece a estudar!</string>
    <string name="menu_videos">Vídeos</string>
    <string name="video_list_title">video title</string>
    <string name="loading_text">Carregando...</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi a ullamcorper nisl, vitae cursus augue. Sed molestie maximus nulla, nec sollicitudin dolor posuere non. Nulla sem lacus, dignissim vel ornare convallis, commodo sed odio. Curabitur tincidunt nibh tortor, ac blandit quam tempor eu. Donec pretium nunc nisi, quis mattis augue imperdiet semper. Maecenas efficitur elementum dui et sagittis. Cras vitae erat aliquet, hendrerit quam nec, bibendum ipsum. Proin aliquet, ante rhoncus eleifend laoreet, lorem lectus condimentum est, eu ultrices sem mi eget elit. Etiam et metus ipsum. Praesent aliquet lacinia justo eget mattis. Nulla facilisi. Nullam a rutrum justo, vitae ultrices lectus. Sed id tincidunt risus, quis luctus ante.

Phasellus elementum justo a lacus tempor, nec ultricies urna ultricies. Pellentesque ac maximus libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam vehicula tellus justo, nec feugiat risus suscipit ut. Phasellus nec lorem at orci consectetur bibendum sollicitudin quis magna. Aenean vehicula rutrum turpis et iaculis. Cras suscipit auctor scelerisque. Phasellus a risus luctus, gravida mauris et, aliquet lorem. Donec hendrerit metus sed tortor congue rutrum. Sed id lobortis ex, nec consectetur lectus. Vestibulum volutpat neque et leo bibendum molestie. Pellentesque pellentesque felis ut odio pretium maximus non nec turpis. In rhoncus massa eu augue facilisis tincidunt nec vel risus. Integer convallis vestibulum turpis vel efficitur. Cras id arcu in quam semper tempus et eget lorem. Donec a lorem auctor, iaculis neque vitae, aliquam metus.

Pellentesque hendrerit sem dolor, a dignissim turpis iaculis vitae. Ut volutpat nec turpis eget suscipit. Integer sagittis quam a nunc sagittis, in finibus neque finibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque viverra lobortis justo, nec tristique velit vulputate vitae. Ut id sem turpis.

Proin eget cursus felis, non lobortis odio. Proin velit arcu, pulvinar quis molestie nec, faucibus vitae nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam gravida pharetra libero, et porttitor orci scelerisque sed. Proin non justo in dolor maximus tristique at ac leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed viverra sapien a rutrum malesuada. Nunc a auctor nunc. Praesent scelerisque et mauris vel euismod. Integer sagittis tempus ipsum. Suspendisse in consequat quam. Nulla facilisis ligula in scelerisque lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur at massa ut quam tincidunt iaculis eu at erat. Phasellus condimentum dictum volutpat.

Suspendisse sit amet arcu orci. Nulla tincidunt metus dapibus lacinia euismod. Sed lobortis sed nisl et convallis. Ut risus nulla, cursus a tincidunt id, porttitor eget nunc. Fusce efficitur magna at odio fringilla, ac pellentesque felis vestibulum. Vivamus faucibus maximus sem, eget accumsan sapien lacinia a. Phasellus egestas congue augue id semper. Nulla euismod, odio varius rhoncus ultricies, tellus enim imperdiet metus, id faucibus odio tortor sit amet ante. Curabitur eleifend purus sapien, eget sagittis nulla fermentum quis. Duis faucibus purus at arcu consectetur, sit amet condimentum est posuere. Vestibulum sit amet mauris vestibulum, rhoncus ligula sit amet, fringilla enim. Nulla in pellentesque enim. Nunc nec laoreet orci, sed mattis lacus. Nunc a nisi rutrum, posuere purus vitae, elementum odio. Vivamus tempor elementum vestibulum.</string>
    <string name="teste">
        <b><u>sen(î)</u></b> Seno do ângulo incidente. Medido entre a reta normal e o raio incidente.\n\n
        <b><u>sen(r)</u></b> Seno do ângulo refratado. Medido entre a reta normal e o raio refratado.\n\n
	    <b><u>v1</u></b> Velocidade do raio incidente. No sistema internacional (SI) sua unidade de medidas é metros por segundo (m/s).\n\n
	    <b><u>v2</u></b> Velocidade do raio refratado. No sistema internacional (SI) sua unidade de medidas é metros por segundo (m/s).\n\n
</string>
    <string name="titulo_teste">Titulo que eu quero por</string>
    <string name="mdl_Reflexao">\nReflexão\n</string>
    <string name="ttl_Reflexao_1">\nRADAR METEOROLÓGICO\n</string>
    <string name="txt_Reflexao_1">
        \t \"Será que hoje vai chover?\". Uma pergunta tão simples que hoje em dia pode ser respondida com uma rápida pesquisa na web já foi e ainda é um tema amplamente estudado. Mas afinal, como os meteorologistas conseguem prever se vai ou não chover?
        Uma das respostas para essas pergunta está ligada diretamente ao advento do RADAR. De acordo com o site http://www.cptec.inpe.br:
    \n\n
        \t<b>RADAR</b>: Abreviatura de Radio Detection And Ranging - alcance da detecção de sinal de rádio. É o instrumento eletrônico usado para detectar objetos a distância através da maneira como esses objetos propagam ou refletem as ondas de rádio. O radar é capaz de detectar fenômenos como a ocorrência de precipitação e a presença de nuvens por meio da reflexão dos sinais eletromagnéticos.
    \n\n
        \tMas afinal, como um radar consegue descobrir se uma nuvem pode gerar chuva em uma determinada região?
</string>
    <string name="ttl_Reflexao_2">\nREFLEXÃO\n</string>
    <string name="txt_Reflexao_2">
        \t<b>REFLEXÃO</b>: [Do Lat. reflexione, \'Ação de voltar atrás, de virar\'; reciprocidade.] S.f 1. Ato ou efeito de refletir(-se). […] 6. Fís. Modificação de direção de propagação de uma onda que incide sobre uma interface que separa dois meios diferentes, e retorna para o meio inicial. (FERREIRA, 1986)
    \n\n
	    \tComo vimos na definição anterior, para que um fenômeno seja definido como reflexão, além de mudar de direção, seu <b>Período (T)<sup>1</sup> , comprimento de onda (?)<sup>2</sup>  e velocidade de propagação (v)<sup>3</sup></b>  devem permanecer constante, ou seja, com valores iguais aos encontrados antes da onda refletir em uma superfície.
       animacao 1 e 2
    </string>
    <string name="ttl_Reflexao_3">\nLEIS DA REFLEXÃO\n</string>
    <string name="txt_Reflexao_3">
        \tPara compreendermos a reflexão, é necessário conhecer as leis que regem esse fenômeno. No estudo da reflexão, contamos com 2 (duas) leis:
    \n\n
        \t1ª <b>LEI</b>: A onda incidente, a onda refletida e a <b><s>RETA NORMAL</s></b>  à superfície estão sobre um mesmo plano, ou seja, são <b>coplanares</b>.
    \n\n
        \t2ª <b>LEI</b>: Independente do comprimento de onda (?), velocidade de propagação, frequência ou material do qual à superfície é feita, o ângulo de incidência (?_1) é igual ao angulo de reflexão (?_2).
    \n
        \tAssim:
    \n
        \t<b>FÓRMULA 01</b>:	?_1=?_2
    \n\n
        \t<b>OBSERVAÇÃO</b> ( ): Na reflexão, dependendo do tipo de onda e do meio onde ela se propaga, pode ocorrer uma reflexão com inversão de<b><s> FASE </s></b>.
    </string>
    <string name="ttl_Reflexao_4">\nREFLEXÃO DE ONDAS NA SUPERFÍCIE DE UM LÍQUIDO\n</string>
    <string name="txt_Reflexao_4_1">
        \tQuando jogamos uma pedra na superfície de um lago, geramos uma perturbação que se propaga, em forma de circulo, até a encosta do lago. Ao chegar a beira do lago, esse pulso sofre uma reflexão.
	\n
        \tNa animação a seguir, podemos observar esse fenômeno.
    </string>
    <string name="txt_Reflexao_4_2">
	    \tÉ interessante perceber a simetria na reflexão que ocorre com ondas circulares em uma superfície plana. A animação anterior mostra a sequência para elaborar a construção geométrica desse tipo de reflexão.
    </string>
    <string name="ttl_Reflexao_5">\nREFLEXÃO DE ONDAS EM UMA CORDA\n</string>
    <string name="txt_Reflexao_5_1">
        \tAo tocarmos um instrumento de corda, por exemplo, um violão, podemos perceber que o pulso se propaga através da corda e, quando atinge o <b><s>CAVALETE (RASTILHO)</s></b>, a onda sofre uma reflexão.
	    \tNas cordas, essa reflexão ocorre como já vimos anteriormente, porém, dependendo da maneira como a corda está fixada, pode ocorrer uma <b><s>INVERSÃO DE FASE</s></b>.
    </string>
    <string name="txt_Reflexao_5_2">
        \tComo podemos observar na animação, nas cordas em que uma das extremidades é fixa, a reflexão sempre ocorre com<b><s> INVERSÃO DE FASE </s></b>, ou seja, se o pulso estava \"para cima\", após a reflexão ele retorna com a fase \"para baixo\".
    \n
        <b>CORDA COM EXTREMIDADE LIVRE</b>
        \tImagine uma corda em que uma das extremidades existe uma argola. Prenda essa argola em uma haste vertical gere um pulso nessa corda. Como irá ocorrer a reflexão quando esse pulso atingir a haste?
    \n
    </string>
    <string name="txt_Reflexao_5_3">
        \tAo produzir nesta corda um pulso, no momento que este pulso sofrer uma reflexão, sua fase será mantida. Este fato é possível, pois a extremidade da corda está  livre para mover-se.

    </string>
    <string name="ttl_Reflexao_6">\nDETERMINANDO A VELOCIDADE DE PROPAGAÇÃO DE UM PULSO EM UMA CORDA\n</string>
    <string name="txt_Reflexao_6_1">
        \tQuando um pulso se propaga em uma corda, podemos verificar se o pulso se move com rapidez ou se está se movendo de forma lenta.
    \n
        \t<b>Marin Marsenne  (1588 - 1648)</b> foi o primeiro a observar a relação entre a força que \"estica\" a corda, chamada de <b>tensão da corda </b>(perceba que em um violão, você pode controlar a tensão das cordas através das <b><s> TARRACHAS (CRAVELHAS) </s></b>) e a <b>densidade linear da corda (?) </b>.
    </string>
    <string name="txt_Reflexao_6_2">
       \n\t<b>Brook Taylor  (1685 - 1731)</b> mais tarde, continuou o trabalho de Mersenne e definiu a relação abaixo:\n
    </string>
    <string name="ttl_Reflexao_7">\nMAS AFINAL, COMO OS RADARES CONSEGUEM DETERMINAR A INCIDÊNCIA DE CHUVA EM UMA DETERMINADA REGIÃO?\n</string>
    <string name="txt_Reflexao_7">
        De acordo com o site http://www.cptec.inpe.br/glossario.shtml#28 ,
        <p> \"O princípio de funcionamento do radar meteorológico é análogo ao sistema de navegação de um morcego. O morcego emite sons de alta frequência que ao serem interceptados por obstáculos retornam ao ouvido do morcego. Quanto mais rápido o som retornar, mais perto estará o obstáculo e quanto mais distante este estiver, mais demorado será o retorno. Desta forma, o morcego é capaz de avaliar a distância ao obstáculo e se desviar do mesmo antes da colisão\".</p>
    </string>
    <string name="ttl_Reflexao_8">\nDETERMINANDO A DISTÂNCIA DE UMA NUVEM DE CHUVA ATRAVÉS DO RADAR METEOROLÓGICO\n</string>
    <string name="txt_Reflexao_8">
        \tSabendo que aquilo que conhecemos por micro-onda é uma onda eletromagnética e, no ar, tem uma velocidade muito próxima da luz no vácuo (c =3·?10?<sup>8</sup>  m/s), utilizamos a seguinte expressão:
    \n
    </string>
</resources>