<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/modules_background">

    <RelativeLayout
        android:layout_marginStart="30dp"
        android:layout_width="1000dp"
        android:layout_height="500dp"
        android:layout_marginTop="100dp">


        <TextView
            android:id="@+id/content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mdl_Reflexao"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/content_title"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- Primeiro Assunto -->
                <TextView
                    android:id="@+id/chapter_title_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_1"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/text_content_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_1"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_01"/>

                <!-- Link do video -->
                <!-- Segundo Assunto -->
                <TextView
                    android:id="@+id/chapter_title_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_2"
                    android:textSize="22sp"
                    android:layout_below="@id/text_content_01"/>

                <TextView
                    android:id="@+id/text_content_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_2"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_02"/>

                <WebView
                    android:id="@+id/gif_01"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_below="@id/text_content_02"/>

                <WebView
                    android:id="@+id/gif_02"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_below="@id/text_content_02"
                    android:layout_toRightOf="@id/gif_01"/>

                <!-- Terceiro Assunto -->

                <TextView
                    android:id="@+id/chapter_title_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_3"
                    android:textSize="22sp"
                    android:layout_below="@id/gif_01"/>

                <TextView
                    android:id="@+id/text_content_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_3"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_03"/>

                <WebView
                    android:id="@+id/gif_022"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/text_content_03"/>

                <!-- Quarto Assunto -->

                <TextView
                    android:id="@+id/chapter_title_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_4"
                    android:textSize="22sp"
                    android:layout_below="@id/gif_022"/>

                <TextView
                    android:id="@+id/text_content_04"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_4_1"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_04"/>

                <WebView
                    android:id="@+id/gif_04"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/text_content_04"/>

                <TextView
                    android:id="@+id/text_content_04_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_4_2"
                    android:textSize="20sp"
                    android:layout_below="@id/gif_04"/>

                <!-- Quinto Assunto -->

                <TextView
                    android:id="@+id/chapter_title_05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_5"
                    android:textSize="22sp"
                    android:layout_below="@id/text_content_04_1"/>

                <TextView
                    android:id="@+id/text_content_05"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_5_1"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_05"/>

                <WebView
                    android:id="@+id/gif_05"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/text_content_05"/>

                <TextView
                    android:id="@+id/text_content_05_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_5_2"
                    android:textSize="20sp"
                    android:layout_below="@id/gif_05"/>

                <WebView
                    android:id="@+id/gif_06"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/text_content_05_1"/>

                <TextView
                    android:id="@+id/text_content_05_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_5_3"
                    android:textSize="20sp"
                    android:layout_below="@id/gif_06"/>

                <!-- Sexto Assunto -->

                <TextView
                    android:id="@+id/chapter_title_06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_6"
                    android:textSize="22sp"
                    android:layout_below="@id/text_content_05_2"/>

                <TextView
                    android:id="@+id/text_content_06_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_6_1"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_06"/>

                <RelativeLayout
                    android:id="@+id/RL_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/text_content_06_1">

                    <ProgressBar
                        android:id="@+id/progress_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_centerInParent="true" />

                    <ImageView
                        android:id="@+id/image_01"
                        android:layout_width="360dp"
                        android:layout_height="400dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/progress_01"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/text_content_06_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_6_2"
                    android:textSize="20sp"
                    android:layout_below="@id/RL_01"/>

                <RelativeLayout
                    android:id="@+id/RL_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/text_content_06_2">

                    <ProgressBar
                        android:id="@+id/progress_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_centerInParent="true" />

                    <ImageView
                        android:id="@+id/image_02"
                        android:layout_width="411dp"
                        android:layout_height="500dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/progress_02" />

                    <ProgressBar
                        android:id="@+id/progress_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/image_02" />

                    <ImageView
                        android:id="@+id/formula_01"
                        android:layout_width="600dp"
                        android:layout_height="600dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/progress_03" />

                </RelativeLayout>

                <!-- Setimo Assunto -->

                <TextView
                    android:id="@+id/chapter_title_07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_7"
                    android:textSize="22sp"
                    android:layout_below="@id/RL_02"/>

                <TextView
                    android:id="@+id/text_content_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_7"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_07"/>

                <!-- Oitavo Assunto -->

                <TextView
                    android:id="@+id/chapter_title_08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl_Reflexao_8"
                    android:textSize="22sp"
                    android:layout_below="@id/text_content_7"/>

                <TextView
                    android:id="@+id/text_content_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Reflexao_8"
                    android:textSize="20sp"
                    android:layout_below="@id/chapter_title_08"/>

                <RelativeLayout
                    android:id="@+id/RL_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/text_content_8">

                    <ProgressBar
                        android:id="@+id/progress_04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_centerInParent="true" />

                    <ImageView
                        android:id="@+id/formula_02"
                        android:layout_width="600dp"
                        android:layout_height="600dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/progress_04" />

                </RelativeLayout>

            </RelativeLayout>


        </ScrollView>

    </RelativeLayout>
</RelativeLayout>